--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Circular Wrist/Elbow Revolution Tester</title>
+  <title>Circular Wrist/Elbow Tester (No Prompts)</title>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
@@ -23,7 +23,6 @@
     .status.detecting { background: rgba(255,193,7,0.2); border-color: rgba(255,193,7,0.6); animation: pulse 1.5s infinite; }
     @keyframes pulse { 0%,100%{transform:scale(1)} 50%{transform:scale(1.02)} }
 
-    /* Visual area: canvas + overlay dot */
     .visual {
       position: relative; width: 280px; height: 280px; margin: 14px auto 10px;
       border-radius: 50%; border: 2px solid rgba(255,255,255,0.28);
@@ -43,6 +42,7 @@
       border-radius: 10px; overflow: hidden; margin: 8px 0; }
     .confidence-fill { height: 100%; width: 0%; background: linear-gradient(90deg,#4CAF50,#FFC107,#FF5722);
       border-radius: 10px; transition: width .2s ease; }
+
     .data-display { background: rgba(0,0,0,0.22); border-radius: 10px; padding: 10px; margin-top: 10px;
       font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, "Liberation Mono", monospace; font-size: 12px; text-align: left; }
     .detection-history { max-height: 160px; overflow-y: auto; background: rgba(0,0,0,0.22); border-radius: 10px; padding: 10px; margin-top: 12px; text-align: left; }
@@ -54,7 +54,13 @@
     }
     button:hover { background: rgba(255,255,255,0.28); transform: translateY(-1px); }
     button:active { transform: translateY(0); }
-    #debugInfo { margin-top: 6px; font: 12px ui-monospace, monospace; opacity: .9; text-align: left; white-space: pre-wrap; }
+
+    #sensorNotice {
+      display: none; margin-top: 8px; padding: 10px; border-radius: 10px;
+      background: rgba(255, 107, 107, 0.18); border: 1px solid rgba(255, 107, 107, 0.5);
+      font-size: 13px; text-align: left;
+    }
+    #debugInfo { display:none; margin-top: 6px; font: 12px ui-monospace, monospace; opacity: .9; text-align: left; white-space: pre-wrap; }
   </style>
 </head>
 <body>
@@ -88,15 +94,19 @@
       <div id="history"></div>
     </div>
 
-    <!-- Debug line will appear here if enabled -->
-    <div id="debugInfo" style="display:none;"></div>
+    <div id="sensorNotice">
+      <strong>No motion data received.</strong><br>
+      If you’re on iPhone/iPad: Safari → tap “aA” → Website Settings → <em>Motion &amp; Orientation Access</em> → ON, then reload.<br>
+      On Android (Chrome): lock icon → Site settings → <em>Motion sensors</em> → Allow.
+    </div>
+
+    <div id="debugInfo"></div>
   </div>
 
   <script>
-    // ---------- Toggle debug text (shows gate, a, ω, radius, veto) ----------
+    // No popups, no requestPermission calls.
     const DEBUG = false;
 
-    // ---------- Math helpers ----------
     const TAU = Math.PI * 2;
     const DEG = Math.PI / 180;
     const clamp = (x,a,b)=>Math.max(a,Math.min(b,x));
@@ -109,29 +119,25 @@
 
     class CalibratedWristDetector {
       constructor(canvas, dotEl){
-        // --- UI / canvas wiring ---
         this.canvas = canvas; this.ctx = canvas.getContext('2d'); this.dotEl = dotEl;
-        this.dpr = Math.max(1, window.devicePixelRatio||1);
-        window.addEventListener('resize', () => { this.resize(); this.resetCanvas(); }, {passive:true});
-        this.resize(); this.resetCanvas();
 
-        // --- Detection targets ---
-        this.progressTarget   = TAU * 0.80;  // ~288° = "almost full"
-        this.segMinDur        = 0.25;        // s
-        this.segMaxDur        = 12.0;        // s
-        this.signCoherenceMin = 0.60;        // mostly one direction
-        this.rMin = 0.04;                    // m
-        this.rMax = 0.50;                    // m
-        this.rWin = 0.8;                     // s window for radius stability
-        this.rCoVMax = 0.60;                 // robust CoV
+        // Detection targets
+        this.progressTarget   = TAU * 0.80;
+        this.segMinDur        = 0.25;
+        this.segMaxDur        = 12.0;
+        this.signCoherenceMin = 0.60;
+        this.rMin = 0.04;
+        this.rMax = 0.50;
+        this.rWin = 0.8;
+        this.rCoVMax = 0.60;
 
-        // Anti spin-in-place (gyro yaw veto) — set high so it won't block normal moves
-        this.yawSpinVeto      = 160;         // deg/s about gravity
-        this.spinLinearThresh = 0.7;         // m/s²
+        // Yaw veto (only works if rotationRate is present; else ignored)
+        this.yawSpinVeto      = 160;   // deg/s about gravity
+        this.spinLinearThresh = 0.7;   // m/s²
 
-        // Gravity + smoothing
-        this.gTau = 0.25;                    // s
-        this.betaMs = 0.10;                  // ~100ms smoothing for planar vector
+        // Filtering
+        this.gTau = 0.25;
+        this.betaMs = 0.10;
 
         // State
         this.g = null; this.lastT = 0;
@@ -140,58 +146,51 @@
         this.theta = 0; this.thetaStart = 0; this.progress = 0;
         this.posDur = 0; this.negDur = 0;
         this.segStartT = null; this.lastGoodMs = 0; this.gapMsAllow = 350;
-
         this.rBuf = [];
         this.lastDetectMs = 0; this.cooldownMs = 1500;
 
-        // Calibration + hysteresis thresholds (will be set from noise)
+        // Calibration + hysteresis thresholds
         this.calibrating = true; this.calibStart = 0; this.calibA = []; this.calibW = [];
-        this.accPlanarMin = 0.10;  // ON thresholds (start gate)
-        this.accPlanarOff = 0.07;  // OFF thresholds (keep gate)
-        this.omegaMin = 0.20;
-        this.omegaOff = 0.14;
+        this.accPlanarMin = 0.10;  // ON
+        this.accPlanarOff = 0.07;  // OFF
+        this.omegaMin = 0.20;      // rad/s
+        this.omegaOff = 0.14;      // rad/s
         this.gateOpen = false;
 
-        // Dot easing
+        // UI / canvas
+        this.dpr = Math.max(1, window.devicePixelRatio||1);
         this.uiAlpha = 0.25; this._uiX = 0; this._uiY = 0;
+        window.addEventListener('resize', () => { this.resize(); this.resetCanvas(); }, {passive:true});
+        this.resize(); this.resetCanvas();
 
-        // Debug label
         this.debugEl = document.getElementById('debugInfo');
-        if (DEBUG && this.debugEl) this.debugEl.style.display = 'block';
+        if (DEBUG) this.debugEl.style.display = 'block';
 
-        // Start calibration
         this._startCalibration();
       }
 
-      // ---------- Layout ----------
+      // Layout
       resize(){
         const cw=this.canvas.clientWidth, ch=this.canvas.clientHeight;
         this.canvas.width = Math.floor(cw*this.dpr);
         this.canvas.height= Math.floor(ch*this.dpr);
         this.w=this.canvas.width; this.h=this.canvas.height;
         this.cx=this.w/2; this.cy=this.h/2;
-
         this.padPx=6*this.dpr;
-        this.R = Math.min(this.cx,this.cy) - this.padPx;   // drawable radius
-        this.rRing = this.R * 0.60;                        // ring when gated
-        this.rIdle = Math.max(4, this.R * 0.06);           // tiny ring when idle
-
+        this.R = Math.min(this.cx,this.cy) - this.padPx;
+        this.rRing = this.R * 0.60;
+        this.rIdle = Math.max(4, this.R * 0.06);
         this.ctx.setTransform(1,0,0,1,0,0);
-        this.ctx.lineWidth=2*this.dpr;
-        this.ctx.lineCap='round'; this.ctx.lineJoin='round';
+        this.ctx.lineWidth=2*this.dpr; this.ctx.lineCap='round'; this.ctx.lineJoin='round';
         this.ctx.strokeStyle='rgba(255,255,255,0.95)';
       }
-
       resetCanvas(){
         this.ctx.clearRect(0,0,this.w,this.h);
-        // outline
         this.ctx.save(); this.ctx.globalAlpha=.18;
         this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R,0,TAU); this.ctx.stroke(); this.ctx.restore();
-        // clip
         this.ctx.save(); this.ctx.beginPath(); this.ctx.arc(this.cx,this.cy,this.R - this.ctx.lineWidth*0.5, 0, TAU); this.ctx.clip();
         this.pathStarted=false;
 
-        // state reset
         this.prevTheta=null; this.theta=0; this.thetaStart=0;
         this.progress=0; this.posDur=0; this.negDur=0;
         this.segStartT=null; this.lastGoodMs=0; this.rBuf.length=0;
@@ -199,7 +198,7 @@
         this._renderProgress(); this._moveDot();
       }
 
-      // ---------- Calibration ----------
+      // Calibration
       _startCalibration(){
         this.calibrating = true;
         this.calibA.length=0; this.calibW.length=0; this.calibStart = performance.now();
@@ -208,11 +207,10 @@
       }
       _maybeFinishCalibration(now){
         if (!this.calibrating) return;
-        if (now - this.calibStart < 1000) return; // 1s
+        if (now - this.calibStart < 1000) return;
         const aMed=median(this.calibA), aMAD=mad(this.calibA, aMed)*1.4826;
         const wMed=median(this.calibW), wMAD=mad(this.calibW, wMed)*1.4826;
 
-        // Clamp calibration so “noisy start” can’t brick the gate
         const aMin = Math.max(0.10, aMed + 4*aMAD);
         const aOff = Math.max(0.06, aMed + 3*aMAD);
         const wMin = Math.max(0.18, wMed + 4*wMAD);
@@ -228,13 +226,12 @@
         if (st){ st.textContent='Listening… draw a small wrist/elbow circle'; st.className='status active'; }
       }
 
-      // ---------- Main pipeline ----------
       addSample(acc, accG, rr){
         const now = performance.now();
         const dt = this.lastT ? Math.max(0.001,(now - this.lastT)/1000) : 0.016;
         this.lastT = now;
 
-        // Gravity init/update (robust)
+        // Gravity init/update
         if (!this.g) {
           if (accG && Number.isFinite(accG.x)) {
             this.g = {x:accG.x, y:accG.y, z:accG.z};
@@ -266,7 +263,7 @@
         const u = px*e1.x + py*e1.y + pz*e1.z;
         const v = px*e2.x + py*e2.y + pz*e2.z;
 
-        // Smooth planar vector (keeps dot calm)
+        // Smooth planar vector
         const beta = Math.exp(-dt/this.betaMs);
         this.uLP = beta*this.uLP + (1-beta)*u;
         this.vLP = beta*this.vLP + (1-beta)*v;
@@ -277,7 +274,7 @@
         const dtheta = unwrap(thetaNow - this.prevTheta);
         const omega = Math.abs(dtheta)/dt;
 
-        // Draw path on ring (gate = big ring, idle = tiny ring)
+        // Draw: ring when gated, tiny ring when idle (reduces jitter look)
         const ring = this.gateOpen ? this.rRing : this.rIdle;
         const x = this.cx + ring*Math.cos(thetaNow);
         const y = this.cy + ring*Math.sin(thetaNow);
@@ -295,12 +292,14 @@
           return;
         }
 
-        // Gyro yaw (for spin veto only)
-        let yawDeg = 0;
-        if (rr) yawDeg = (rr.beta||0)*gn.x + (rr.gamma||0)*gn.y + (rr.alpha||0)*gn.z;
-        const spinVeto = Math.abs(yawDeg) > this.yawSpinVeto && aPlanar < this.spinLinearThresh;
+        // Optional yaw veto (only if rotationRate present)
+        let spinVeto = false;
+        if (rr) {
+          const yawDeg = (rr.beta||0)*gn.x + (rr.gamma||0)*gn.y + (rr.alpha||0)*gn.z;
+          spinVeto = Math.abs(yawDeg) > this.yawSpinVeto && aPlanar < this.spinLinearThresh;
+        }
 
-        // Radius stability (centripetal r ≈ a/ω²)
+        // Radius stability (centripetal)
         let rInst = (omega>1e-6) ? aPlanar/(omega*omega + 1e-9) : Infinity;
         this._pushRadius(now, rInst);
         const rStats = this._radiusStats(now);
@@ -308,7 +307,7 @@
                          rStats.med >= this.rMin && rStats.med <= this.rMax &&
                          rStats.cov <= this.rCoVMax;
 
-        // ---- Hysteresis gate (RELAXED): allow progress when (radius OK) OR (accel above floor) ----
+        // Hysteresis gate (no permission prompts, just logic)
         if (!this.gateOpen) {
           this.gateOpen = !spinVeto && (omega >= this.omegaMin) && (radiusOk || aPlanar >= this.accPlanarMin);
           if (this.gateOpen) { this.segStartT=now; this.thetaStart=this.theta; this.posDur=0; this.negDur=0; }
@@ -324,18 +323,7 @@
           }
         }
 
-        // Debug line
-        if (DEBUG && this.debugEl) {
-          const progPct = Math.round(this.progress*100);
-          this.debugEl.textContent =
-            `gate:${this.gateOpen?'1':'0'} prog:${progPct}% ` +
-            `a:${aPlanar.toFixed(2)} (min:${this.accPlanarMin.toFixed(2)}/${this.accPlanarOff.toFixed(2)}) ` +
-            `ω:${(omega/DEG).toFixed(0)}°/s (min:${(this.omegaMin/DEG).toFixed(0)}/${(this.omegaOff/DEG).toFixed(0)}) ` +
-            `r:${isFinite(rInst)?rInst.toFixed(2):'∞'} med:${rStats.med.toFixed(2)} cov:${rStats.cov.toFixed(2)} ` +
-            `yaw:${yawDeg.toFixed(0)} veto:${spinVeto?'Y':'N'}`;
-        }
-
-        // Integrate angle & check detection only while gate is open
+        // Integrate & detect only while gated
         if (this.gateOpen) {
           this.theta += dtheta;
           if (dtheta>0) this.posDur += dt; else if (dtheta<0) this.negDur += dt;
@@ -347,13 +335,18 @@
 
           if (prevProg < 1 && this.progress >= 1) this._maybeDetect(now, rStats);
         } else {
-          // gentle decay so bar doesn't "stick"
           this.progress = Math.max(0, this.progress - 0.015);
           this._renderProgress();
         }
 
-        // UI readout
         const p = document.getElementById('planarA'); if (p) p.textContent = aPlanar.toFixed(2);
+        if (DEBUG && this.debugEl) {
+          this.debugEl.textContent =
+            `gate:${this.gateOpen?'1':'0'} prog:${Math.round(this.progress*100)}% a:${aPlanar.toFixed(2)} ` +
+            `ω:${(omega/DEG).toFixed(0)}°/s r:${isFinite(rInst)?rInst.toFixed(2):'∞'} ` +
+            `med:${(rStats.med||0).toFixed(2)} cov:${(rStats.cov||0).toFixed(2)} spinVeto:${spinVeto?'Y':'N'}`;
+        }
+
         this.prevTheta = thetaNow;
       }
 
@@ -411,89 +404,37 @@
       }
 
       _onDetected(){
-        // flash background
         document.body.style.background='linear-gradient(135deg, #4CAF50 0%, #45a049 100%)';
         setTimeout(()=>{ document.body.style.background='linear-gradient(135deg, #667eea 0%, #764ba2 100%)'; }, 700);
 
-        // status
         const status=document.getElementById('status');
         if (status){ status.textContent='🎉 FULL REVOLUTION'; status.className='status detecting';
           setTimeout(()=>{ status.textContent='Listening… draw a small wrist/elbow circle'; status.className='status active'; }, 1500); }
 
-        // history
         const history=document.getElementById('history');
         if (history){ const div=document.createElement('div'); div.className='detection-item';
           div.textContent=new Date().toLocaleTimeString()+': Full revolution'; history.appendChild(div); }
 
         if ('vibrate' in navigator) navigator.vibrate([160,100,160]);
-        console.log('✅ Full revolution detected');
       }
     }
 
-    // ---------- Wiring ----------
-    let detector=null, isActive=false;
+    // ---- Wiring (NO permission API) ----
+    let detector=null, isActive=false, probeTimer=null;
 
-    async function startDetection(){
-    try {
-    const isiOS = typeof DeviceMotionEvent !== 'undefined' &&
-                    typeof DeviceMotionEvent.requestPermission === 'function';
-
-    if (isiOS) {
-        // Ask for DeviceMotion (required for 'devicemotion')
-        let dm = 'denied';
-        try { dm = await DeviceMotionEvent.requestPermission(); } catch(e) {}
-        // Also try DeviceOrientation (some iOS builds couple the two)
-        try {
-        if (typeof DeviceOrientationEvent !== 'undefined' &&
-            typeof DeviceOrientationEvent.requestPermission === 'function') {
-            await DeviceOrientationEvent.requestPermission().catch(()=>{});
-        }
-        } catch(e) {}
-
-        if (dm !== 'granted') {
-        alert(
-            'iOS blocked motion sensors.\n\nTurn it on and reload:\n' +
-            'Safari → aA → Website Settings → Motion & Orientation Access → ON'
-        );
-        return;
-        }
+    function startDetection(){
+      // Must be from a user gesture; no permission prompts here.
+      start();
+      // Probe if any devicemotion arrives in 2s; if not, show inline tip.
+      let got = false;
+      const probe = () => { got = true; window.removeEventListener('devicemotion', probe); };
+      window.addEventListener('devicemotion', probe, { passive: true });
+      clearTimeout(probeTimer);
+      probeTimer = setTimeout(()=>{
+        if (!got) document.getElementById('sensorNotice').style.display='block';
+      }, 2000);
     }
 
-    // Start your detector (unchanged)
-    start(); // this is your existing start() that adds the devicemotion listener
-
-    // Sanity probe: did we actually get an event?
-    let got = false;
-    const probe = () => { got = true; window.removeEventListener('devicemotion', probe); };
-    window.addEventListener('devicemotion', probe, { passive: true });
-
-    setTimeout(() => {
-        if (!got) {
-        alert(
-            'No motion events received.\n\nQuick fixes:\n' +
-            '• iOS Safari: aA → Website Settings → Motion & Orientation Access → ON → Reload\n' +
-            '• Android Chrome: Site settings → Motion sensors → Allow\n' +
-            '• Ensure the page is HTTPS and not inside an iframe.'
-        );
-        }
-    }, 2000);
-
-    // Optional UI tweaks you already had:
-    const st = document.getElementById('status');
-    if (st) { st.textContent = 'Calibrating… hold still for 1s'; st.className = 'status'; }
-    document.getElementById('startBtn').style.display = 'none';
-    document.getElementById('stopBtn').style.display = 'inline-block';
-
-    } catch (err) {
-    console.error(err);
-    alert(
-        'Permission request failed.\n\nFix:\n' +
-        '• iOS: Safari → aA → Website Settings → Motion & Orientation Access → ON → Reload\n' +
-        '• Android Chrome: Site settings → Motion sensors → Allow\n' +
-        '• Use HTTPS; avoid running inside an iframe.'
-    );
-    }
-}
     function start(){
       if (isActive) return;
       detector = new CalibratedWristDetector(
@@ -508,6 +449,7 @@
       document.getElementById('startBtn').style.display='none';
       document.getElementById('stopBtn').style.display='inline-block';
     }
+
     function stopDetection(){
       if (!isActive) return;
       window.removeEventListener('devicemotion', onMotion);
@@ -517,13 +459,15 @@
       document.getElementById('startBtn').style.display='inline-block';
       document.getElementById('stopBtn').style.display='none';
     }
+
     function onMotion(e){
       detector.addSample(
         e.acceleration || null,
         e.accelerationIncludingGravity || null,
-        e.rotationRate || null   // only used for spin veto
+        e.rotationRate || null   // optional; used only for spin veto
       );
     }
+
     function clearHistory(){
       const h=document.getElementById('history'); if(h) h.innerHTML='';
       document.getElementById('confidenceBar').style.width='0%';
@@ -531,9 +475,7 @@
       if (detector) detector.resetCanvas();
     }
 
-    // Optional: allow tap on debug line to toggle visibility
-    if (DEBUG) { const d=document.getElementById('debugInfo'); if (d) d.style.display='block'; }
-    console.log('📱 Ready. Start → 1s still → draw a smooth wrist/elbow circle.');
+    console.log('📱 No-permission version ready. Start → 1s still → draw a gentle wrist/elbow circle.');
   </script>
 </body>
 </html>
